--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
 port=8000
-MONGODB_URI=mongodb+srv://samnahadiya211_db_user:<db password>@cluster0.o34huzm.mongodb.net/?appName=Cluster0
+MONGODB_URI=mongodb+srv://samnahadiya211_db_user:<db_password>@cluster0.o34huzm.mongodb.net/?appName=Cluster0
 CORS_ORIGIN=*
